--- a/JavaScript-Projects/My-games/index.html
+++ b/JavaScript-Projects/My-games/index.html
@@ -11,9 +11,9 @@
 <div id="container">
     <h3>Title Here</h3>
     <p>This is a paragraph.</p>
-    <label for="textInput">Text Input:</label>
+    <label for="textInput">Your Answer:</label>
     <input type="text" id="textInput" placeholder="Enter text..."> <br>
-    <button id="button">Submit</button>
+    <input type="submit" id="button">
 </div>
 
 </body>
