finished lesson 6 learn Node

--- a/Learn Node/lesson 3-5/about.html
+++ b/Learn Node/lesson 3-5/about.html
@@ -6,7 +6,12 @@
     <title>Node Course</title>
 </head>
 <body>
-    <h1>404 - OOPS!</h1>
-    <h2>That page does not exist</h2>
+    <div>
+        <h1>About</h1>
+        <h2>working with routing and paths</h2>
+    </div>
+    <nav>
+        <a href="/">Homepage</a>
+    </nav>
 </body>
 </html>
