--- a/Learn Node/lesson 3-5/404.html
+++ b/Learn Node/lesson 3-5/404.html
@@ -6,7 +6,11 @@
     <title>Node Course</title>
 </head>
 <body>
-    <h1>About</h1>
-    <h2>working with routing and paths</h2>
+    <h1>404 - OOPS!</h1>
+    <h2>That page does not exist</h2>
+    <nav>
+        <a href="/">Homepage</a> <br>
+        <a href="/about">About</a>
+    </nav>
 </body>
 </html>
